objects/Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account this adjustment record is associated to.</description>
        <inlineHelpText>The account this adjustment record is associated to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment_Category__c</fullName>
        <description>The category of the adjustment. Example: Medical, Dental, Vision etc</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The category of the adjustment. Example: Medical, Dental, Vision etc</inlineHelpText>
        <label>Adjustment Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Benefit Design parent of this adjustment record.</inlineHelpText>
        <label>Benefit Design</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Changed_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTime_of_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DateTime of Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Affected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Affected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_changed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form changed</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The fields previous value.</inlineHelpText>
        <label>Previous Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_Drawloop__c</fullName>
        <formula>IF(NOT(ISBLANK(Benefit_Request_Form__c)),'BRF','BD')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Drawloop</label>
        <type>Text</type>
    </fields>
    <label>Adjustment</label>
    <nameField>
        <displayFormat>AN-{00000}</displayFormat>
        <label>Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>